# ShippingboAPY

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  api_wrapper.py  data.json  old_client.py  product.py  pyproject.toml  refresh_token.txt  requirements.txt  single_request_test.py  test_api.py  test_client.py  token.txt
docs/: conf.py  index.rst  requirements.txt
shippingboapy/: __init__.py  address.py  api_wrapper.py  auth.py  client.py  config.py  exceptions.py  order.py  product.py  reseller_product.py
shippingboapy/controllers/: abstract_controller.py  address_label_controller.py  address_label_summaries_controller.py  kit_component_controller.py  logistician_service_config_controller.py  order_controller.py  product_controller.py  product_stocks_controller.py  resellers_controller.py  user_controller.py
shippingboapy/models/: abstract_model.py  address.py  address_label.py  address_label_config.py  address_label_config_model.py  address_label_model.py  address_label_summaries.py  address_label_summaries_model.py  address_model.py  carrier.py  client_order_origin.py  client_order_source.py  dangerous_good_product_information.py  filter.py  kit_component.py  kit_component_model.py  logistician_service_config.py  logistician_service_config_model.py  order.py  order_dispatch.py  order_document.py  order_event.py  order_item_product_mapping.py  order_item_product_mapping_model.py  order_model.py  order_tag.py  pack_component.py  pack_component_model.py  package.py  package_model.py  package_picture_config.py  preorder_reservation.py  product.py  product_additional_fields_model.py  product_instructions_files_model.py  product_model.py  product_stock_variation.py  product_stocks_information.py  reseller.py  reseller_product.py  (+14 more)
shippingboapy/resources/: address.py  address_label.py  address_label_config.py  address_label_summaries.py  background_job.py  base_resource.py  carrier.py  client_order_origin.py  client_order_source.py  dangerous_good_product_informations.py  kit_component.py  logistician_service_config.py  order.py  order_dispatch.py  order_document.py  order_event.py  order_item_product_mapping.py  order_tag.py  pack_component.py  package.py  package_picture_config.py  product.py  product_stock_variation.py  product_variation_stock.py  reseller.py  reseller_product.py  return_order.py  shipment.py  shipment_pallet.py  shipping_method.py  update_hook.py  user.py
src/: config.toml
src/shippingboapy/: api_wrapper.py  client.py  order.py  product.py
src/shippingboapy_tryno/: address.py  addresses.py  adresses.py  api_wrapper.py  client.py  order.py  order_item.py  product.py  reseller.py  reseller_product.py  shippingbo.py
tests/: conftest.py  test.py  test_address.py  test_address_label.py  test_address_label_config.py  test_address_label_summaries.py  test_addresses.py  test_api_wrapper.py  test_auth_code.py  test_background_job.py  test_carrier.py  test_client.py  test_client_order_origin.py  test_client_order_source.py  test_config.py  test_dangerous_good_product_information.py  test_get_package.py  test_global.py  test_kit_component.py  test_logistician_service_config.py  test_order.py  test_order_dispatch.py  test_order_document.py  test_order_event.py  test_order_item_product_mapping.py  test_order_tag.py  test_order_tag_mixin.py  test_orders.py  test_pack_component.py  test_package.py  test_product_variation_stock.py  test_products.py  test_refresh_token.py  test_reseller.py  test_reseller_product.py  test_shipment_pallet.py  test_user.py
