[build-system]
    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project]
    name = "shippingboapy"
    version = "0.1.4"
    requires-python = ">=3.10"
    dependencies = [
        "httpx>=0.28.1",
        "pydantic>=2.12.5",
        "pydantic-settings>=2.13.5",
    ]

    authors = [
        { name = "Tryno", email = "trynogaunt@gmail.com" }
    ]

    maintainers = [
        { name = "Tryno", email = "trynogaunt@gmail.com" }
    ]

    description = "A Python client for the Shippingbo API."

    readme = { file = "README.md", content-type = "text/markdown" }

    keywords = [
        "shippingbo",
        "api",
        "client",
        "python",
    ]

    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Framework :: AsyncIO",
        "Typing :: Typed",
        "Operating System :: OS Independent",
    ]

    license = "MIT"
    license-files = ["LICENSE"]

[project.urls]
    Homepage = "https://github.com/trynogaunt/ShippingboAPY"
    Repository = "https://github.com/trynogaunt/ShippingboAPY"
    Issues = "https://github.com/trynogaunt/ShippingboAPY/issues"

[project.optional-dependencies]
    dev = [
        "pytest",
        "pytest-cov",
        "pytest-asyncio",
        "black",
        "isort",
        "pre-commit",
    ]
    publish = [
        "build",
        "twine",
    ]

[tool.pytest.ini_options]
    pythonpath = ["."]
    asyncio_mode = "auto"

[tool.pyright]
    pythonVersion = "3.10"
    typeCheckingMode = "strict"
    venvPath = "."
    venv = "venv"
    
[[tool.pyright.executionEnvironments]]
root = "shippingboapy/resources"
reportPrivateUsage = "none"

[tool.setuptools.packages.find]
include = ["shippingboapy*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
shippingboapy = ["py.typed"]
